<resources>
    <string name="app_name">TrackPack</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <string name="home_second">Home Second</string>
    <string name="favoris">Favoris</string>
    <string name="profil">Profil</string>
    <string name="parametres">Paramètres</string>
    <string name="communication">Communication</string>
    <string name="title_activity_navigation_drawer">Pulse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Auth_Text_description">With TrackPack, find the simple and easiest way to send and track your parcel safely from one point to another.</string>
    <string name="delivery_by_verified_users">Delivery by Verified Users</string>
    <string name="login">Login</string>
    <string name="register_text1">Please enter your phone number</string>
    <string name="otp_text2">We will send you an One Time Password (OTP) \nto your phone number for verification.</string>
    <string name="send_otp">Send OTP</string>
    <string name="verification">Verification</string>
    <string name="verify_text_2">Please type the verification code sent to \nyour phone number</string>
    <string name="resend_code">Didn\'t received OTP? Resend code</string>
    <string name="verify_code">Verify code</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="or">Or</string>
    <string name="register_continue">Continue</string>
    <string name="create_your_account_here">Create your account \nhere</string>
    <string name="register_with">Register with :</string>
    <string name="continue_with">Continue with :</string>
    <string name="create_an_account">Create an account ?</string>
    <string name="menu_image">Menu image</string>
    <string name="notification_image">Notification image</string>
    <string name="find_the_packages">Find the packages.</string>
    <string name="enter_your_tracking_number_and_see_details_about_your_package">Enter your tracking number and see \ndetails about your package.</string>
    <string name="tracking_number_image_view">Tracking number image view</string>
</resources>