<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
    
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.VerifyActivity">
    
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/registerContainer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp">
        
                <ImageView
                    android:id="@+id/verifyImageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_circle_chevron_left_foreground"
                    android:onClick="getBackToRegister"
                    android:elevation="8dp"/>
        
               
    
            </androidx.constraintlayout.widget.ConstraintLayout>
        
            <ImageView
                android:id="@+id/registerImageView"
                android:layout_width="230dp"
                android:layout_height="170dp"
                android:src="@drawable/ic_image_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerContainer1"
                android:layout_marginTop="20dp"
                android:transitionName="anim4"/>
        
            <TextView
                android:id="@+id/registerTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/registerImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/register_text1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/purple_200"
                android:textSize="15sp"
                android:textAlignment="center"
                android:transitionName="anim2"/>
        
            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/registerTextView1"
                android:layout_marginTop="25dp"
                android:gravity="center">
            
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_textSize="14sp"
                    app:ccpDialog_textColor="@color/purple_200"
                    app:ccp_arrowColor="@color/purple_200"
                    app:ccp_areaCodeDetectedCountry="true"
                    app:ccp_defaultLanguage="FRENCH"
                    app:ccpDialog_cornerRadius="8dp"
                    android:layout_marginEnd="5dp"/>
    
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerNumberEditText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="Phone number"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
        
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>
                
        
        
            </LinearLayout>
        
            <TextView
                android:id="@+id/registerTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/container1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/otp_text2"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:textAlignment="center"
                android:transitionName="anim3"/>
        
            
            <LinearLayout
                android:id="@+id/buttonSendOTP"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/roundbutton"
                android:elevation="8dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/registerTextView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"
                android:transitionName="anim1"
                android:onClick="openOTPPage">
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/send_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
        
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_circled_chevron_right_filled_foreground" />
            </LinearLayout>
    
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>